fixed sidebar maximized minimized alignment issue

--- a/client/src/components/SidePanel/SidePanel.module.css
+++ b/client/src/components/SidePanel/SidePanel.module.css
@@ -4,13 +4,13 @@
   background-color: white;
   box-sizing: border-box;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   /* top: 50px; */
   width: min-content;
   padding-top: 36px;
   padding-bottom: 36px;
   height: 80vh;  
-  border-style: solid none solid solid;
+  border-style: solid solid solid solid;
   border-color: var(--primary-color);
 
 }
@@ -39,21 +39,32 @@
   letter-spacing: 3px;
   padding-top: 20px;
   padding-bottom: 10px;
-  width: 364px;
+  /* width: 364px; */
   border-radius: 5px;
   background-color: var(--primary-color);
-  height: min-content;
+  height: max-content;
   /* height: 100%; */
-  transform: rotate(90deg);
-  top: 285px;
-  right: 226px;
+  /* transform: rotate(90deg); */
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  top: 12.5vh;
+  right: 364px;
   border-style: solid solid solid solid;
   border-color: var(--secondary-color);
+  margin-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.maximized > .side-panel-title-not-fixed{
   margin-right: 0px;
 }
 
+
+
 .card-list-not-fixed{
   overflow-y: hidden;
+  
 }
 
 .card-list-fixed{
@@ -61,12 +72,17 @@
 }
 
 .minimized{
-    transform: translate(379px, 0px);
+    /* transform: translate(379px, 0px); */
+    transform: translate(381px, 0px);
 }
 
+
+
 .fas{
-    padding-left: 15px;
+    /* padding-left: 15px; */
     font-size: 1.5rem;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .side-panel-title:hover{
@@ -83,28 +99,25 @@
   .side-panel-title{
     display: flex;
     align-items: flex-start;
-    padding: 0px;
     width: 45px;
-    height: 40px;
-    transform: translate(-135px, 0px);
+    height: 45px;
+    transform: translate(0px, 200px);
+    /* top: 12.5vh; */
     padding: 10px;
     padding-right: 5px;
+    padding-left: 5px;
   }
 
-  .fas{
-    transform: rotate(90deg) translate(2.5px, 10px);
-   
-    
-  }
+
   
-  .fa-chevron-down{
+  .fa-chevron-right{
     color: var(--secondary-color);
+    padding-left: 10px;
   }
 
-  .fa-chevron-up{
+  .fa-chevron-left{
     color: white;
-    padding-bottom: 20px;
-    padding-left: 0px;
+    padding-left: 10px;
   }
 
 }
